<resources>
    <string name="app_name">生活计算机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="length_title">长度单位计算</string>
    <string name="area_title">面积单位计算</string>
    <string name="volume_title">体积单位计算</string>
    <string name="temperature_title">温度单位计算</string>
    <string name="speed_title">速度单位计算</string>
    <string name="time_title">时间单位计算</string>
    <string name="mass_title">重量单位计算</string>
    <string name="rate_title">汇率计算</string>
    <string name="capital_title">大写计算</string>
    <string name="tax_title">个税计算</string>
    <string name="house_title">房贷计算</string>
    <string name="choose_unit">选择单位</string>
    <string name="pick_commit">确认</string>
    <string name="pick_cancel">取消</string>
    <string name="tax_result">月薪清单</string>
    <string name="rate_text">汇率计算</string>
    <string name="length_text">长度计算</string>
    <string name="area_text">面积计算</string>
    <string name="volume_text">体积计算</string>
    <string name="loan_text">房贷计算</string>
    <string name="temperature_text">温度计算</string>
    <string name="speed_text">速度计算</string>
    <string name="time_text">时间计算</string>
    <string name="mass_text">重量计算</string>
    <string name="capital_text">大写计算</string>
    <string name="science_text">科学计算器</string>
    <string name="wealth_text">理财计算</string>
    <string name="km_length">千米</string>
    <string name="m_length">米</string>
    <string name="dm_length">分米</string>
    <string name="cm_length">厘米</string>
    <string name="mm_length">毫米</string>
    <string name="um_length">微米</string>
    <string name="nm_length">纳米</string>
    <string name="pm_length">皮米</string>
    <string name="nmi_length">海里</string>
    <string name="mi_length">英里</string>
    <string name="fur_length">弗隆</string>
    <string name="fm_length">英寻</string>
    <string name="yd_length">码</string>
    <string name="ft_length">英尺</string>
    <string name="in_length">英寸</string>
    <string name="gongli_length">公里</string>
    <string name="li_length">里</string>
    <string name="zhang_length">丈</string>
    <string name="chi_length">尺</string>
    <string name="cun_length">寸</string>
    <string name="fen_length">分</string>
    <string name="li_new_length">厘</string>
    <string name="hao_length">毫</string>
    <string name="pc_length">秒差距</string>
    <string name="ld_length">月球距离</string>
    <string name="tianwen_length">天文单位</string>
    <string name="ly_length">光年单位</string>
    <string name="km2_area">平方千米</string>
    <string name="ha_area">公顷</string>
    <string name="are_area">公亩</string>
    <string name="m2_area">平方米</string>
    <string name="dm2_area">平方分米</string>
    <string name="cm2_area">平方厘米</string>
    <string name="mm2_area">平方毫米</string>
    <string name="um2_area">平方微米</string>
    <string name="acre_area">英亩</string>
    <string name="mile2_area">平方英里</string>
    <string name="yd2_area">平方码</string>
    <string name="ft2_area">平方英尺</string>
    <string name="in2_area">平方英寸</string>
    <string name="rd2_area">平方竿</string>
    <string name="qing_area">顷</string>
    <string name="mu_area">亩</string>
    <string name="chi2_area">平方尺</string>
    <string name="cun2_area">平方寸</string>
    <string name="gongli2_area">平方公里</string>
    <string name="m3_volume">立方米</string>
    <string name="dm3_volume">立方分米</string>
    <string name="cm3_volume">立方厘米</string>
    <string name="mm3_volume">立方毫米</string>
    <string name="hl3_volume">公石</string>
    <string name="l_volume">升</string>
    <string name="dl_volume">分升</string>
    <string name="cl_volume">厘升</string>
    <string name="ml_volume">毫升</string>
    <string name="ft3_volume">立方英尺</string>
    <string name="ln3_volume">立方英寸</string>
    <string name="yd3_volume">立方码</string>
    <string name="af3_volume">亩英尺</string>
    <string name="c_temperature">摄氏度</string>
    <string name="f_temperature">华氏度</string>
    <string name="k_temperature">开尔文</string>
    <string name="r_temperature">兰氏度</string>
    <string name="re_temperature">列氏度</string>
    <string name="c_speed">光速</string>
    <string name="ma_speed">马赫</string>
    <string name="m_s_speed">米/秒</string>
    <string name="km_h_speed">千米/小时</string>
    <string name="km_s_speed">千米/秒</string>
    <string name="kn_speed">海里/小时</string>
    <string name="mph_speed">英里/小时</string>
    <string name="fps_speed">英尺/秒</string>
    <string name="ips_speed">英寸/秒</string>
    <string name="yr_time">年</string>
    <string name="wk_time">周</string>
    <string name="day_time">天</string>
    <string name="h_time">小时</string>
    <string name="min_time">分钟</string>
    <string name="s_time">秒</string>
    <string name="ms_time">毫秒</string>
    <string name="us_time">微秒</string>
    <string name="ps_time">皮秒</string>
    <string name="t_mass">吨</string>
    <string name="kg_mass">千克</string>
    <string name="g_mass">克</string>
    <string name="mg_mass">毫克</string>
    <string name="ug_mass">微克</string>
    <string name="q_mass">公担</string>
    <string name="lb_mass">磅</string>
    <string name="oz_mass">盎司</string>
    <string name="ct_mass">克拉</string>
    <string name="gr_mass">格令</string>
    <string name="l_t_mass">长吨</string>
    <string name="sh_t_mass">短吨</string>
    <string name="cwt_uk_mass">英担</string>
    <string name="cwt_us_mass">美担</string>
    <string name="uk_st_mass">英石</string>
    <string name="dr_mass">打兰</string>
    <string name="dan_mass">担</string>
    <string name="jin_mass">斤</string>
    <string name="qian_mass">钱</string>
    <string name="liang_mass">两</string>
    <string name="rmb_rate">人民币</string>
    <string name="my_rate">美元</string>
    <string name="oy_rate">欧元</string>
    <string name="ry_rate">日元</string>
    <string name="gb_rate">港币</string>
    <string name="hy_rate">韩元</string>
    <string name="yb_rate">英镑</string>
    <string name="tz_rate">泰铢</string>
    <string name="xtb_rate">新台币</string>
    <string name="ynd_rate">越南盾</string>
    <string name="agtbs_rate">阿根廷比索</string>
    <string name="alqdlm_rate">阿联酋迪拉姆</string>
    <string name="adlyy_rate">澳大利亚元</string>
    <string name="amy_rate">澳门元</string>
    <string name="belslb_rate">白俄罗斯卢布</string>
    <string name="bxlye_rate">巴西雷亚尔</string>
    <string name="elslu_rate">俄罗斯卢布</string>
    <string name="flbbs_rate">菲律宾比索</string>
    <string name="jndy_rate">加拿大元</string>
    <string name="mlxyljt_rate">马来西亚林吉特</string>
    <string name="km_length_short">km</string>
    <string name="m_length_short">m</string>
    <string name="dm_length_short">dm</string>
    <string name="cm_length_short">cm</string>
    <string name="mm_length_short">mm</string>
    <string name="um_length_short">um</string>
    <string name="nm_length_short">nm</string>
    <string name="pm_length_short">pm</string>
    <string name="nmi_length_short">nmi</string>
    <string name="mi_length_short">mi</string>
    <string name="fur_length_short">fur</string>
    <string name="fm_length_short">fm</string>
    <string name="yd_length_short">yd</string>
    <string name="ft_length_short">ft</string>
    <string name="in_length_short">in</string>
    <string name="gongli_length_short">gongli</string>
    <string name="li_length_short">li</string>
    <string name="zhang_length_short">zhang</string>
    <string name="chi_length_short">chi</string>
    <string name="cun_length_short">cun</string>
    <string name="fen_length_short">fen</string>
    <string name="li_new_length_short">li</string>
    <string name="hao_length_short">gao</string>
    <string name="pc_length_short">pc</string>
    <string name="ld_length_short">ld</string>
    <string name="tianwen_length_short">au</string>
    <string name="ly_length_short">ly</string>
    <string name="km2_area_short">km²</string>
    <string name="ha_area_short">ha</string>
    <string name="are_area_short">are</string>
    <string name="m2_area_short">m²</string>
    <string name="dm2_area_short">dm²</string>
    <string name="cm2_area_short">cm²</string>
    <string name="mm2_area_short">mm²</string>
    <string name="um2_area_short">um²</string>
    <string name="acre_area_short">acre</string>
    <string name="mile2_area_short">mile²</string>
    <string name="yd2_area_short">yd²</string>
    <string name="ft2_area_short">ft²</string>
    <string name="in2_area_short">inch²</string>
    <string name="rd2_area_short">rd²</string>
    <string name="qing_area_short">qing</string>
    <string name="mu_area_short">mu</string>
    <string name="chi2_area_short">chi²</string>
    <string name="cun2_area_short">cun²</string>
    <string name="gongli2_area_short">gongli²</string>
    <string name="m3_volume_short">m³</string>
    <string name="dm3_volume_short">dm³</string>
    <string name="cm3_volume_short">cm³</string>
    <string name="mm3_volume_short">mm³</string>
    <string name="hl3_volume_short">hl³</string>
    <string name="l_volume_short">l</string>
    <string name="dl_volume_short">dl</string>
    <string name="cl_volume_short">cl</string>
    <string name="ml_volume_short">ml</string>
    <string name="ft3_volume_short">ft³</string>
    <string name="ln3_volume_short">ln³</string>
    <string name="yd3_volume_short">yd³</string>
    <string name="af3_volume_short">af³</string>
    <string name="c_temperature_short">°C</string>
    <string name="f_temperature_short">°F</string>
    <string name="k_temperature_short">K</string>
    <string name="r_temperature_short">°R</string>
    <string name="re_temperature_short">°Re</string>
    <string name="c_speed_short">c</string>
    <string name="ma_speed_short">Ma</string>
    <string name="m_s_speed_short">m/s</string>
    <string name="km_h_speed_short">km/h</string>
    <string name="km_s_speed_short">km/s</string>
    <string name="kn_speed_short">kn</string>
    <string name="mph_speed_short">mph</string>
    <string name="fps_speed_short">fps</string>
    <string name="ips_speed_short">ips</string>
    <string name="yr_time_short">yr</string>
    <string name="wk_time_short">wk</string>
    <string name="day_time_short">day</string>
    <string name="h_time_short">h</string>
    <string name="min_time_short">min</string>
    <string name="s_time_short">s</string>
    <string name="ms_time_short">ms</string>
    <string name="us_time_short">us</string>
    <string name="ps_time_short">ps</string>
    <string name="t_mass_short">t</string>
    <string name="kg_mass_short">kg</string>
    <string name="g_mass_short">g</string>
    <string name="mg_mass_short">mg</string>
    <string name="ug_mass_short">ug</string>
    <string name="q_mass_short">q</string>
    <string name="lb_mass_short">lb</string>
    <string name="oz_mass_short">oz</string>
    <string name="ct_mass_short">ct</string>
    <string name="gr_mass_short">gr</string>
    <string name="l_t_mass_short">l.t</string>
    <string name="sh_t_mass_short">sh.t</string>
    <string name="cwt_uk_mass_short">cwt</string>
    <string name="cwt_us_mass_short">cwt</string>
    <string name="uk_st_mass_short">uk.st</string>
    <string name="dr_mass_short">dr</string>
    <string name="dan_mass_short">dan</string>
    <string name="jin_mass_short">jin</string>
    <string name="qian_mass_short">qian</string>
    <string name="liang_mass_short">liang</string>
    <string name="ze1">贷款金额</string>
    <string name="nx1">贷款年限</string>
    <string name="lv1">年利率</string>
    <string name="btn_sub1">开始计算</string>
    <string name="am10">贷款总额</string>
    <string name="am11">还款月数</string>
    <string name="am12">月还款</string>
    <string name="am13">支付利息</string>
    <string name="am14">本息总和</string>
    <string name="zex1">公积金贷款总额</string>
    <string name="zex2">商业贷款总额</string>
    <string name="lvx1">公积金年利率</string>
    <string name="lvx2">商业年利率</string>
    <string name="dengebenxi"> 等额本息</string>
    <string name="dengebenjin"> 等额本金</string>
    <string name="fangshi"> 还款方式</string>
    <string name="wang"> 万</string>
</resources>