<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:paddingLeft="5dip"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am12"/>

                    <TextView
                        android:paddingRight="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/am12"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:paddingLeft="5dip"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am10"/>

                    <TextView
                        android:paddingRight="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/am10"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:paddingLeft="5dip"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am13"/>

                    <TextView
                        android:paddingRight="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/am13"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:paddingLeft="5dip"
                        android:gravity="center"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am14"/>

                    <TextView
                        android:paddingRight="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/am14"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

                <RelativeLayout
                    android:padding="10dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:paddingLeft="5dip"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/am11" />

                    <TextView
                        android:paddingRight="8dp"
                        android:layout_alignParentRight="true"
                        android:id="@+id/am11"
                        style="@style/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"/>

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/picker_line_color"/>

        </LinearLayout>

        <LinearLayout
            android:padding="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/fangshi"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/fangshi" >
            </TextView>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/radioBenxi"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/dengebenxi" >
                </RadioButton>

                <RadioButton
                    android:id="@+id/radioBenjin"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dengebenjin" >
                </RadioButton>

            </RadioGroup>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <RelativeLayout
            android:id="@+id/zonge_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/ze1"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/ze1" >
            </TextView>

            <TextView
                android:id="@+id/wang"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/wang" >
            </TextView>

            <EditText
                android:id="@+id/zev1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/wang"
                android:layout_toRightOf="@id/ze1"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip"
                android:text="100" >
            </EditText>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <LinearLayout
            android:id="@+id/zuhe_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/zex1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/zex1" >
                </TextView>

                <TextView
                    android:id="@+id/wang1"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/wang" >
                </TextView>

                <EditText
                    android:id="@+id/zevx1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/wang1"
                    android:layout_toRightOf="@id/zex1"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingTop="5dip"
                    android:text="50" >
                </EditText>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/picker_line_color"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" >

                <TextView
                    android:id="@+id/zex2"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/zex2" >
                </TextView>

                <TextView
                    android:id="@+id/wang2"
                    style="@style/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:text="@string/wang" >
                </TextView>

                <EditText
                    android:id="@+id/zevx2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/wang2"
                    android:layout_toRightOf="@id/zex2"
                    android:background="@drawable/edittext_bg"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:paddingBottom="5dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:paddingTop="5dip"
                    android:text="50" >
                </EditText>
            </RelativeLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                android:id="@+id/nx1"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/nx1" >
            </TextView>

            <Spinner
                android:id="@+id/nxv1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_spinner" >
            </Spinner>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <RelativeLayout
            android:id="@+id/nianlilv_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/lv1"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/lv1" >
            </TextView>

            <Spinner
                android:id="@+id/lvv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/lv1"
                android:background="@drawable/bg_spinner" >
            </Spinner>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <LinearLayout
            android:id="@+id/gongjijinlilv_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp" >

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/lvx1" >
            </TextView>

            <EditText
                android:id="@+id/gongjijinlilv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <LinearLayout
            android:id="@+id/shangyelilv_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dip"
                android:paddingRight="5dip"
                android:text="@string/lvx2" >
            </TextView>

            <EditText
                android:id="@+id/shangyelilv"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:ems="10"
                android:inputType="numberDecimal"
                android:paddingBottom="5dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:paddingTop="5dip" >
            </EditText>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/picker_line_color"/>

        <Button
            android:id="@+id/sub1"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dip"
            android:background="@drawable/button"
            android:padding="10dip"
            android:text="@string/btn_sub1"
            android:textColor="#065C99" >
        </Button>
    </LinearLayout>

</ScrollView>